# Calculadora_cientifica2_0

./: Analise da divisão antigo  CMakeLists.txt  Controle  Divisao_de_expressoes.c  Divisao_de_expressoes.h  Exemplos de testes para o programa  Fila_de_fila_de_inteiros_e_caracteres.c  Fila_de_fila_de_inteiros_e_caracteres.h  Fila_de_operacoes_entre_filas.c  Fila_de_operacoes_entre_filas.h  Fila_principal_de_caracteres.c  Fila_principal_de_caracteres.h  Fila_principal_de_inteiros.c  Fila_principal_de_inteiros.h  Inicio de uma logica de fatoração  Interface.c  Interface.h  Leitura antiga e funcional  TAD_Fila_da_expressao.c  TAD_Fila_da_expressao.h  TAD_calculadora.c  TAD_calculadora.h  TAD_fila_de_expoentes.c  TAD_fila_de_expoentes.h  TAD_fila_de_letras.c  TAD_fila_de_letras.h  TAD_fila_de_operacoes.c  TAD_fila_de_operacoes.h  TAD_fila_de_resultados.c  TAD_fila_de_resultados.h  main.c
